[package]
name = "balance-token-swap"
version = "0.1.1"
authors = ["Rac <racoon.supply.nft@gmail.com>"]
edition = "2018"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# chain bank
cosmwasm_1_1 = []

[dependencies]
cosmwasm-schema   = "1.1.0"
cosmwasm-std = { version = "1.1.5", features = ["cosmwasm_1_1"] }
cosmwasm-storage = { version = "1.1.5" }
cw-storage-plus = "0.16.0"
cw-utils        = "0.16.0"
cw2 = { version = "0.16.0" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
token-bindings = { git = "https://github.com/CosmWasm/token-bindings" }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.5" }
cw-multi-test = { version = "0.15" }
token-bindings-test = { git = "https://github.com/CosmWasm/token-bindings" }
